examples/errors/nonProp.con
-- Properties must return a Boolean
nonProp :: Integer -> Integer .
nonProp x =*= x .
